# midl-x-bitcoin-summit-hackathon-2025

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LIFE++-MIDL-BTCHACK  README.md  RESOURCES.md  SCHEDULE.md  SUBMISSION_TEMPLATE.md
submissions/track1/utxo-indexer-helios/: .gitignore  ALGORITHM_RESULTS.md  ARCHITECTURE.md  BITCOIND_SETUP.md  Makefile  README.md  docker-compose.yml  go.mod  init.sql  run.sh  test_wallets.json  utxos.txt
tracks/track-1/: README.md  RULES.md  track#1_rules.md
tracks/track-1/dapp-demo/: README.md  package-lock.json  package.json  pnpm-lock.yaml
tracks/track-1/utxo-indexer-selector/: .gitignore  Cargo.toml  DATABASE_EXAMPLES.md  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  README.md  RUNES_INTEGRATION_ANALYSIS.md  TECHNICAL_ANALYSIS.md  TESTING_GUIDE.md  config.docker.toml  config.toml  demo.sh
tracks/track-1/utxo-indexer-selector/examples/: README.md  wallet-demo.html
tracks/track-1/utxo-indexer-selector/src/: config.rs  fee_estimation.rs  main.rs  types.rs
tracks/track-1/utxo-indexer-selector/src/api/: handlers.rs  mod.rs  server.rs
tracks/track-1/utxo-indexer-selector/src/indexer/: mod.rs  utxo_indexer.rs
tracks/track-1/utxo-indexer-selector/src/rpc/: client.rs  mod.rs
tracks/track-1/utxo-indexer-selector/src/runes/: mod.rs  processor.rs  types.rs
tracks/track-1/utxo-indexer-selector/src/selector/: algorithms.rs  mod.rs  utxo_selector.rs
tracks/track-1/utxo-indexer-selector/src/storage/: mod.rs  rocksdb_storage.rs
tracks/track-1/utxo-psbt-demo/: .gitignore  README.md  env.example  package.json  (+2 more)
tracks/track-2/: RULES.md
(+238 files in other folders)
