[package]
name = "utxo-indexer-selector"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Asia Developer"]
description = "A high-performance UTXO indexer and selector for Bitcoin regtest"

[dependencies]
# Bitcoin core libraries
bitcoin = { version = "0.30", features = ["serde"] }
bitcoincore-rpc = "0.17"

# Async runtime and HTTP
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Database and storage
rocksdb = "0.22"
uuid = { version = "1.0", features = ["v4"] }

# Utilities and error handling
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
config = "0.14"

# Web server for API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
